# 25-cpp-market-maker

./: CMakeLists.txt  CMakePresets.json  README.md  build-with-buildroot.sh  config_debug.json
benchmark/: trading_math_benchmark.cpp
docs/: FMA_ASSEMBLY_OPTIMIZATION.md
include/: disruptor_client.h  market_maker_fsm.h  order_producer.h  trading_math_asm.h
include/common/: perf_monitor.h  rt_config.h
include/model/: itch_predictor.hpp
model/: DATA_FORMAT.md  README.md  README_ITCH_PREDICTOR.md  itch_predictor.cpp  itch_predictor.hpp  requirements.txt
src/: main.cpp  market_maker_fsm.cpp  order_producer.cpp
src/asm/: trading_math_asm.S
